Bug 572651 - ThebesLayer shader program (GetBGRXLayerProgram) is slow on mobile r=vladimir a=b-f